templates/enterprise-steam_template.yaml
---
# Source: enterprise-steam/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-enterprise-steam
  labels:
    helm.sh/chart: enterprise-steam-1.8.12
    app.kubernetes.io/name: enterprise-steam
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.8.12"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9555
      targetPort: 9555
      name: steam
      protocol: TCP
  selector:
    app.kubernetes.io/name: enterprise-steam
    app.kubernetes.io/instance: release-name
---
# Source: enterprise-steam/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-enterprise-steam
  labels:
    helm.sh/chart: enterprise-steam-1.8.12
    app.kubernetes.io/name: enterprise-steam
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.8.12"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: enterprise-steam
      app.kubernetes.io/instance: release-name
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: enterprise-steam
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-enterprise-steam
      securityContext:
        fsGroup: 955
        runAsGroup: 955
        runAsUser: 955
      containers:
        - name: enterprise-steam
          image: "h2oai/enterprise-steam:1.8.12"
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 2
              memory: 8Gi
            requests:
              cpu: 2
              memory: 8Gi
          ports:
            - name: steam
              containerPort: 9555
              protocol: TCP
          volumeMounts:
            - mountPath: /opt/h2oai/steam/data
              name: enterprise-steam-data
          securityContext:
              allowPrivilegeEscalation: false
      volumes:
        - name: enterprise-steam-data
          persistentVolumeClaim:
            claimName: release-name-enterprise-steam
---
# Source: enterprise-steam/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: release-name-enterprise-steam
  labels:
    helm.sh/chart: enterprise-steam-1.8.12
    app.kubernetes.io/name: enterprise-steam
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.8.12"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "enterprise-steam.cluster.local"
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-enterprise-steam
              servicePort: 9555
